# cairn-mod

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  OPERATIONS.md  README.md  RETROSPECTIVE.md  SECURITY.md  SETUP.md  cairn-design.md  deny.toml
.chainlink/rules/: elixir-phoenix.md  elixir.md
.claude/: settings.json
.crosslink/: driver-key.pub  hook-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
.sqlx/: query-00f89a6b6b89695ef3b25bc23a505fed91bc3c8224a7c8dd3ce112521f063150.json  query-0471390696d84dc2d52f2db8821c97056433d22a89ae96032d5d5943ed482791.json  query-047abc9d1f72223dd9ddb044e494e8ea4a219242244c28f0432b99e0daf2a6ad.json  query-04fdf814ed28d7a32cea8b9945c095f7b651bcc275d697b4c721572b1b8ef6fe.json  query-054e7a4ad8243f438405c75ebf930fe2fb348bfccfdf6fe6bca47684cb838c87.json  query-0577fc06854bf0cf518985384c90c10a916e79e410bfc73f2e62e8a6f59384ac.json  query-05c8195b352d739790efe5aaf47863977e774098bf9c0a0860fcfc1e194e662e.json  query-064dd9083bf5a77df2129b3509b26b9de0ccdc23832c25843aa4114da1871cca.json  query-06751ec01a6cb71296535745d7b3e3b4778e58a5f58a0b11546b448e9b7e7ebc.json  query-06f6214b869a119289b0a617400eae26c01cc64485aaaa0ca6ccc6a154c038e3.json  query-079be7a2249009940e341be8472e2e2fb5f7db113f719a4056bbb8e9c137aeca.json  query-07e078907ecc781bf673949ebf3061e475586662a61c00c433ab9a1d18d92b9e.json  query-0805bacb12fc1df21341f63d8531818c69487e79ba9ee697c05d3e7c218423f4.json  query-082b1b8ab687d6e61057945d402f9b2d4c9f7db7aa049bb0c5a675b3e6bdaa43.json  query-093741067175cfe05abf810312abd24e28ac3ecc8003145b936181091d95b071.json  query-098adb7fa1e94e5f1edd5ee35652feeafe3ff8a42dccda38524d4ec86e98cba8.json  query-0acb2996e7d525d8a4fdf2b8db83fe642b0779c19c68ddc1058b49e943873371.json  query-0b404ee31fc5f715a1ca11a064ea7be8daddf309605efe479e944067933e6fa1.json  query-0c0166493ff2d0ee22c0541d160def09cf91c87a888808bf715e3229e867c2fa.json  query-0e8e8a0ae6c2bbf4f0295197190e04773f3d2aafbf3d6413a3728eaa143da848.json  query-0ebc929257597a240e99f651228b85c42f8a8b1baa950ba5dff248b66915472b.json  query-0fd5885a80b161325ee7283e372a23751d011f71f7ce31e596120cf5f4347276.json  query-1144d4ae7b022152e8fd7aebc0e9a2f6e0b6bcfab76042bf8cbcda5480ee8dae.json  query-13bebf57943a1d26f941787d6f36892e9cb4c5d5d3d8701c3402e1209110fb77.json  query-146661e15fc5640b5f4557fa5d17699aef2e98cc8f58c96b82fa0b42bd59e681.json  query-14e659a6170137cc19e3ee4d927ed85175762e0af1cb05fffbf2d0027d661b67.json  query-14ff2b742364ac34aa243b3ef26f1cfcf14d29fd1d340ba15cb9bc551810e562.json  query-164d04c5399d82c37670393ccf6a12c1d31ff600f56d2008046204958c3feab5.json  query-16bbad9b0df5b4cd903c545ce82806c47f21d00cc8a7ed93ba702f2a273ffb56.json  query-16be526a21f2db8d4df228ad62569dddf5ccbbf0386d8081b98bb1af57158815.json  query-18042261558ef19d0358c4a36ee37565d6d0a3df0edd73f10c7fb3b04d32ee49.json  query-1813690b7bb259ecd28e53345b2a88f75902aa8fb278d9bb615ff36ef22f3524.json  query-1a96d80f04b7903f98840ee96a6a4c10122cfaeb8f7b1aeb1de30e615e4ea56a.json  query-1a9acf20dcfe08c9688eeb425a99bcc02a8ac41e32a47e20af3fc33d441df7df.json  query-1de6f10ae3e7af4ee586ddd4650b182ea6c34d7f1680a3b4b4e7b8652eb51f62.json  query-209213b2df4cbee625e81b2225917be8ee37dfaec109bd5d14dfa3b06b945512.json  query-22153b685c7a7ccf3b8d732073d3434ef2823eb6124add05f27e490e8e79830a.json  query-22666a801741de87d8fd0332345125ec198ac977e8a51dd2600572cb4198affd.json  query-229dc2a023515fe16b08d125cf52fa2d5c4cd094d065ee76916d9e8f3b6e4624.json  query-229f2f24c88fc22c73396a173c35141ff21ec64c18193cb3da157f0e38f3511b.json  (+205 more)
contrib/: README.md
contrib/caddy/: Caddyfile
contrib/nginx/: cairn.conf
contrib/systemd/: cairn.service
docs/: moderator-cli.md  tracker-history.md
examples/: mock_pds.rs
lexicons/: README.md
migrations/: 0001_init.sql  0002_audit_hash_chain.sql  0003_account_moderation_state.sql  0004_label_emission.sql  0005_policy_automation.sql
src/: config.rs  credential_file.rs  error.rs  label.rs  lib.rs  main.rs  moderators.rs  report.rs  serve.rs  service_record.rs  signing.rs  signing_key.rs  storage.rs  writer.rs
src/audit/: append.rs  hash.rs  mod.rs
src/auth/: cache.rs  did.rs  jwt.rs  mod.rs  ssrf.rs
src/cli/: audit.rs  audit_rebuild.rs  audit_verify.rs  auth.rs  error.rs  login.rs  logout.rs  mod.rs  moderator.rs  moderator_action.rs  moderator_pending.rs  operator_login.rs  operator_session.rs  output.rs  pds.rs  publish_service_record.rs  report.rs  retention.rs  session.rs  trust_chain.rs  unpublish_service_record.rs
src/labels/: emission.rs  mod.rs  policy.rs
src/moderation/: cache.rs  decay.rs  mod.rs  policy.rs  reasons.rs  strike.rs  types.rs  window.rs
src/policy/: automation.rs  evaluator.rs  mod.rs
src/server/: create_report.rs  did_document.rs  health.rs  limits.rs  mod.rs  query.rs  strike_state.rs  subscribe.rs  wellknown.rs  xrpc.rs
src/server/admin/: apply_label.rs  audit_view.rs  common.rs  confirm_pending_action.rs  dismiss_pending_action.rs  flag_reporter.rs  get_audit_log.rs  get_pending_action.rs  get_report.rs  get_subject_history.rs  get_subject_strikes.rs  get_trust_chain.rs  list_audit_log.rs  list_labels.rs  list_pending_actions.rs  mod.rs  (+9 more)
tests/: admin_audit.rs  admin_labels.rs  admin_reports.rs  admin_retention.rs  admin_subject_actions.rs  admin_trust_chain.rs  audit_hash_chain.rs  auth.rs  cli_audit.rs  cli_login.rs  cli_logout.rs  cli_moderator.rs  cli_report.rs  cli_report_admin.rs  cli_retention.rs  cli_trust_chain.rs  config.rs  create_report.rs  did_document.rs  health.rs  lexicons.rs  pds_client.rs  public_lexicons.rs  public_strike_state.rs  query.rs  serve.rs  serve_binary.rs  serve_verify.rs  service_record_publish.rs  service_record_unpublish.rs  session_file.rs  signature_negative.rs  signature_parity.rs  signing_kat.rs  signing_key_file.rs  strike_cache.rs  subscribe.rs  wellknown.rs  writer.rs
tests/e2e/: quickstart.sh
tests/support/: mock_pds.rs  mod.rs
(+69 files in other folders)
