[package]
name = "cairn-mod"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Lightweight, Rust-native ATProto labeler"
repository = "https://github.com/skydeval/cairn-mod"

[lib]
name = "cairn_mod"
path = "src/lib.rs"

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
proto-blue-lex-data = "0.2.6"
proto-blue-lex-cbor = "0.2.6"
proto-blue-crypto = "0.2.6"

[dev-dependencies]
tempfile = "3"
hex = "0.4"
serde_json = "1"
