[package]
name = "cairn-mod"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Lightweight, Rust-native ATProto labeler"
repository = "https://github.com/skydeval/cairn-mod"

[lib]
name = "cairn_mod"
path = "src/lib.rs"

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
proto-blue-lex-data = "0.2.6"
proto-blue-lex-cbor = "0.2.6"
proto-blue-crypto = "0.2.6"
time = { version = "0.3", default-features = false, features = [
    "formatting",
    "parsing",
    "macros",
] }
serde_json = { version = "1", features = ["preserve_order"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
bytes = "1"
tower-http = { version = "0.6", features = ["cors"] }
form_urlencoded = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
lru = "0.12"
url = "2"
async-trait = "0.1"
dirs = "6"
rpassword = "7"
tempfile = "3"
include_dir = "0.7"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
tokio-tungstenite = "0.29"
wiremock = "0.6"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
urlencoding = "2"
