[package]
name = "cairn-mod"
version = "1.5.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Lightweight, Rust-native ATProto labeler"
repository = "https://github.com/skydeval/cairn-mod"

# Trim the crates.io tarball to what `cargo install cairn-mod` users
# actually need: the binary, lib source, embedded lexicons, the
# .sqlx/ offline cache, deployment templates, and load-bearing docs
# (LICENSE, README, CHANGELOG, CONTRIBUTING, SECURITY).
#
# `.sqlx/` (~95 entries) is a hard floor — required for downstream
# offline builds when sqlx-cli isn't installed. Cutting below ~170
# files would require splitting the cache into lib-only vs
# all-targets variants; deferred as a #22 follow-up.
exclude = [
    # Internal dev tooling / agent runtime — not for downstream.
    ".chainlink/",
    ".claude/",
    ".github/",
    ".gitignore",
    "deny.toml",
    # Internal docs — design narrative, governance, history. The
    # crates.io README + CHANGELOG carry what users need; the rest
    # is for contributors who clone the git repo.
    "cairn-design.md",
    "docs/",
    "RETROSPECTIVE.md",
    "MAINTAINERS.md",
    "CODE_OF_CONDUCT.md",
    # Tests + fixtures — `cargo install` doesn't run them; they
    # add ~70 files of weight (signature corpus alone is ~40).
    "tests/",
]

[lib]
name = "cairn_mod"
path = "src/lib.rs"

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
proto-blue-lex-data = "0.2.6"
proto-blue-lex-cbor = "0.2.6"
proto-blue-crypto = "0.2.6"
time = { version = "0.3", default-features = false, features = [
    "formatting",
    "parsing",
    "macros",
] }
serde_json = { version = "1", features = ["preserve_order"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
bytes = "1"
tower-http = { version = "0.6", features = ["cors"] }
form_urlencoded = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
lru = "0.16"
url = "2"
async-trait = "0.1"
dirs = "6"
rpassword = "7"
tempfile = "3"
include_dir = "0.7"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tokio-tungstenite = "0.29"
wiremock = "0.6"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
urlencoding = "2"
